force-app/main/default/objects/Lead_Scoring_Rule__mdt/Lead_Scoring_Rule__mdt.object-meta.xml
<CustomObject>
    <description>Regras de pontuacao de Lead avaliadas em Apex, uma por registro. Vive em Custom Metadata para que mudar peso, operador ou campo avaliado seja mudanca de configuracao e nunca mudanca de Apex, e para nao consumir a cota de storage de dados da org.</description>
    <label>Regra de Scoring de Lead</label>
    <pluralLabel>Regras de Scoring de Lead</pluralLabel>
</CustomObject>