force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Se o motor de scoring considera esta regra. Regra desligada permanece no repositorio como historico em vez de ser apagada, o que torna a mudanca de politica reversivel.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>