force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Comparison_Value__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Value__c</fullName>
    <description>Valor comparado com o campo do Lead, guardado como texto e convertido pelo Apex conforme o tipo do campo. Fica vazio quando o operador e is_blank ou is_not_blank, que nao comparam com nada.</description>
    <label>Comparison Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>