force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Justificativa de negocio da regra em linguagem comum, para que quem revisa a politica de scoring entenda a intencao sem reconstruir a comparacao mentalmente.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>