force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>Nome de API do campo de Lead que a regra avalia, por exemplo Industry ou AnnualRevenue. O Apex resolve o campo pelo describe em tempo de execucao, entao um nome invalido tem de ser tratado como regra ignorada e nao como excecao.</description>
    <label>Field API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>