force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>Comparacao aplicada entre o valor do campo do Lead e Comparison_Value__c. A lista e restrita porque cada operador corresponde a um ramo implementado no Apex: um valor fora dela nao teria como ser avaliado.</description>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not_equals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>greater_than</fullName>
            </value>
            <value>
                <fullName>less_than</fullName>
            </value>
            <value>
                <fullName>is_blank</fullName>
            </value>
            <value>
                <fullName>is_not_blank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>