force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>Pontos somados a Lead_Score__c quando a regra casa. Aceita valor negativo, para que uma caracteristica desqualificadora reduza a pontuacao em vez de exigir uma regra separada.</description>
    <label>Points</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>