force-app/main/default/objects/Lead_Scoring_Rule__mdt/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <description>Ordem de avaliacao da regra. O menor numero e avaliado primeiro, o que torna o resultado do scoring deterministico e reproduzivel.</description>
    <label>Rule Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>